ZFIN-7628 fix certain data access to be compliant to JDK 17
ZFIN-7628 remove deprecated use in Java